--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
      <div class="site-header__menu-content">
        <div class="site-header__btn-container">
-         <a href="#" class="btn">Get in Touch</a>
+         <a href="#" class="btn open-modal">Get in Touch</a>
        </div>
        <nav class="primary-nav primary-nav--pull-right">
          <ul>
@@ -49,7 +49,7 @@
         <h1 class="large-hero__title">Your favorite wines.</h1>
         <h2 class="large-hero__subtitle">One sip away.</h2>
         <p class="large-hero__description">We have wine and cheese pairings that will make your day.</p>
-        <p><a href="#" class="btn btn--orange btn--large">Come Visit Today</a></p>
+        <p><a href="#" class="btn btn--orange btn--large open-modal">Come Visit Today</a></p>
       </div>
     </div>
     
@@ -75,7 +75,7 @@
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-            <p>We started our culinary and oenology experiences as most do with friends and get togethers at college, however it soon progressed into a career of sourcing and sampling many of the great products for a trendy little grocer in Southern California. Literally, travelling the World, finding the best in cheese and wine artistry was our passion that turned into our livelyhood. Soon after growing our love of food and drink and opening our own <a href="#">Irish pub.</a></p>
+            <p>We started our culinary and oenology experiences as most do with friends and get togethers at college, however it soon progressed into a career of sourcing and sampling many of the great products for a trendy little grocer in Southern California. Literally, travelling the World, finding the best in cheese and wine artistry was our passion that turned into our livelyhood. Soon after expanding our love of food and drink by opening a fun, food centric, <a href="#">Irish pub.</a></p>
             <p>Sharing our food and wine experiences and knowledge is <strong>our passion</strong>. Sourcing great cheeses from around the World is challanging, yet it is made easier by already having met some of the same cheese artisans from previous travels.</p>
             <p>Pairing these fine cheeses with fabulous wines makes the journey even more fun. We find the best wines to make the experiences of our patrons <strong>memorable.</strong></p>
           </div>
@@ -162,9 +162,25 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2019 Wine & Cheese Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2019 Wine & Cheese Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
     </div>
   </footer>
+
+  <div class="modal">
+    <div class="modal__inner">
+      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Get in<strong>Touch</strong></h2>
+      <div class="wrapper wrapper--narrow">
+        <p class="modal__description">We have gift baskets available too! Stop by and have a look. Until then connect with us on any of the platforms below!</p>
+      </div>
+      <div class="social-icons">
+        <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+      </div>
+    </div>
+    <div class="modal__close">X</div>
+  </div>
   <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
