--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,8 @@
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-            <p>We started our culinary and oenology experiences as most do with friends and get togethers at college, however it soon progressed into a career of sourcing and sampling many of the great products for a trendy little grocer in Southern California. Literally, travelling the World, finding the best in cheese and wine artistry was our passion that turned into our livelyhood. Soon after expanding our love of food and drink by opening a fun, food centric, <a href="#">Irish pub.</a></p>
-            <p>Sharing our food and wine experiences and knowledge is <strong>our passion</strong>. Sourcing great cheeses from around the World is challanging, yet it is made easier by already having met some of the same cheese artisans from previous travels.</p>
+            <p>We started our culinary and oenology experiences as most do with friends and get togethers at college, however it soon progressed into a career of sourcing and sampling many of the great products for a trendy little grocer in Southern California. Literally, travelling the world, finding the best in cheese and wine artistry was our passion that turned into our livelyhood. Soon after weexpanded on our love of food and drink by opening a fun, food centric <a href="#">Irish pub.</a></p>
+            <p>Sharing our food and wine experiences and knowledge is <strong>our passion</strong>. Sourcing great cheeses from around the world is challenging, yet it is made easier by already having met some of the same cheese artisans from previous travels.</p>
             <p>Pairing these fine cheeses with fabulous wines makes the journey even more fun. We find the best wines to make the experiences of our patrons <strong>memorable.</strong></p>
           </div>
         </div> 
