--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
   <div id="our-beginning" class="page-section" data-matching-link="#our-beginning-link">
     <div class="wrapper">
       <h2 class="headline headline--centered headline--light headline--b-margin-small">The first walk along High Street <strong>was our own.</strong></h2>
-      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;re excited when others also <strong>enjoy its magnificence.</strong></h3>
+      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;re excited to share its <strong>appeal with others.</strong></h3>
 
       <div class="wrapper wrapper--medium wrapper--b-margin">
         <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
